<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_courses"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_courses" />
    <item
        android:id="@+id/nav_quiz"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/nav_quiz" />
    <item
        android:id="@+id/nav_flashcard"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/nav_flashcard" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>